# sidekick

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  sidekick.py  tools.py
