[project]
name = "ai-sidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "gradio>=5.34.2",
    "isort>=6.0.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "sympy>=1.14.0",
    "wikipedia>=1.4.0",
]
